# homelab

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  ansible.cfg  docker-compose.yml  hosts.yml  playbook.yml  pyproject.toml  setup  setup.py
.github/: dependabot.yml
.github/workflows/: qa-checks.yml
ansible/: hosts  maintenance.yml  setup.yml  site.yml
ansible/roles/cockpit/handlers/: main.yml
ansible/roles/cockpit/tasks/: main.yml
ansible/roles/cockpit/vars/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/vars/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker/vars/: main.yml
ansible/roles/dotfiles/tasks/: main.yml
ansible/roles/dotfiles/vars/: main.yml
ansible/roles/homepage/tasks/: main.yml
ansible/roles/homepage/templates/: bookmarks.yaml.j2  services.yaml.j2  settings.yaml.j2  widgets.yaml.j2
ansible/roles/homepage/vars/: main.yml
ansible/roles/jellyfin/tasks/: main.yml
ansible/roles/jellyfin/vars/: main.yml
ansible/roles/sonarr/tasks/: main.yml
ansible/roles/sonarr/vars/: main.yml
ansible/roles/transmission/tasks/: main.yml
ansible/roles/transmission/vars/: main.yml
configs/: .bashrc
