[tool.poetry]
name = "homelab"
version = "0.1.0"
description = "A script to automate setup of my personal homelab server"
authors = ["Somraj Saha <31373860+Jarmos-san@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
black = "^23.9.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
